erDiagram
    tenants ||--o{ documents : "tenant_id"
    organization_units ||--o{ documents : "org_unit"
    document_types ||--o{ documents : "document_type_id"
    document_types ||--o{ document_type_definitions : "type_definition"
    document_types ||--o{ document_workflows : "workflow"
    documents ||--o{ document_items : "lines"
    documents ||--o{ document_links : "source/target"
    documents ||--o{ payments : "allocated"
    document_items ||--o{ landed_cost_allocations : "allocations"
    documents {
        bigint id PK
        bigint tenant_id FK
        bigint org_unit_id FK
        bigint document_type_id FK
        string document_number
        date document_date
        date due_date
        string status
        bigint party_id FK
        decimal grand_total
        jsonb data "custom fields"
    }
    document_type_definitions {
        bigint id PK
        bigint tenant_id FK
        bigint document_type_id FK
        int version
        jsonb field_schema
        jsonb line_field_schema
        jsonb validation_rules
        jsonb form_layout
    }
    document_workflows {
        bigint id PK
        bigint tenant_id FK
        bigint document_type_id FK
        string name
        jsonb states
        jsonb transitions
    }